_sass/others.scss
/* ... */
nav li a.active:hover {
}

nav.navbar {
    background: $color_nav_bg;
    padding: 0;
    margin: 0;
    border-top: 5px solid $color_primary;
    border-bottom: 1px solid $color_lbg;
    height: 25px;
}

nav.navbar p {
    margin-bottom: 0;
}

/* ------------------------------------------------------------------------- */
/* Columns                                                                   */
/* ------------------------------------------------------------------------- */

section.column_left_sidebar,
section.column_main,
section.column_right_sidebar {
    float: left;

    font-family: $font_default;
    margin-top: 17px;
    margin-left: 15px;
    margin-right: 15px;
    margin-bottom: 20px;
}

section.column_left_sidebar {
    width: 20%
}
section.column_main {
    width: 47%;
}
section.column_right_sidebar {
    width: 23%;

    border-radius: 3px;
    background: #1a1a1a;
    padding: 12px 15px 15px 15px;
}

/* Media screen sizes */
/* https://css-tricks.com/snippets/css/media-queries-for-standard-devices/ */
@media print, screen and (max-width: 1280px) {
    section[class="column_left_sidebar"] { width: 23%; }
    section[class="column_main"] { width: 40%; }
    section[class="column_right_sidebar"] { width: 24%; }
}

@media print, screen and (max-width: 1024px) {
    section[class="column_left_sidebar"] { width: 30%; }
    section[class="column_main"] { width: 62%; }
    section[class="column_right_sidebar"] { width: 92%; }
}

/* Intermediate transition */
/* Expand the main column only */
@media print, screen and (max-width: 850px) {
    section[class="column_left_sidebar"] { width: 30%; }
    section[class="column_main"] { width: 62%; }
    section[class="column_right_sidebar"] { width: 92%; }
}

@media print, screen and (max-width: 749px) {
    section[class="column_left_sidebar"] { width: 30%; }
    section[class="column_main"] { width: 60%; }
    section[class="column_right_sidebar"] { width: 92%; }
}

@media print, screen and (max-width: 720px) {
    section[class="column_left_sidebar"] { width: 93%; }
    section[class="column_main"] { width: 93%; }
    section[class="column_right_sidebar"] { width: 86%; }
}

@media print, screen and (max-width: 480px) {
    section[class="column_left_sidebar"] { width: 93%; }
    section[class="column_main"] { width: 93%; }
    section[class="column_right_sidebar"] { width: 86%; }
}

/* generic */
@media print, screen and (max-width: 360px) {
    section[class="column_left_sidebar"] { width: 91%; }
    section[class="column_main"] { width: 92%; }
    section[class="column_right_sidebar"] { width: 83%; }
}

@media print, screen and (max-width: 320px) {
    section[class="column_left_sidebar"] { width: 91%; }
    section[class="column_main"] { width: 92%; }
    section[class="column_right_sidebar"] { width: 82%; }
}

/* ------------------------------------------------------------------------- */
/* Main content column                                                       */
/* ------------------------------------------------------------------------- */

section.column_main h3 { font-size: 18px; }
section.column_main h4 { font-size: 15px; }
section.column_main h5 { font-size: 13px; }
section.column_main h6 { font-size: 11px; }

section.column_main {
    h3, h4, h5, h6 {
        font-family: $font_heading;
        font-weight: normal;
        color: $color_text_highlight;
    }
    h3, h4 {
        text-shadow: 1px 1px 1px #000;
    }
    h3.pagetitle {
        padding-top: 5px;
        margin-bottom: 14px;
    }
}

section.column_main h3:first-child {
    line-height: 1em;
    /* Align top with the left and right column 'titles' */
    margin-top: 6px;
    margin-top: 0;
}

section.column_main h4,
section.column_main h5,
section.column_main h6 {
    padding-top: 20px;
}

section.column_main p,
section.column_main li,
section.column_main dl {
    font-family: $font_default;
    font-size: $font_size_default;
    line-height: 18px;
    text-align: left;
}

section.column_main p {
    margin: 0 0 8px 0;
}

section.column_main p.excerpt,
section.column_main p.category,
section.column_main p.date {
    font-size: $font_size_default;
    color: $color_text_dark;
    margin: 0;
}

section.column_main ul {
    margin-bottom: 10px;
}

/* Collapse bottom margin of inner 'ul' */
section.column_main ul ul {
    margin-bottom: 0px;
}

/* ------------------------------------------------------------------------- */
/* Left sidebar column                                                       */
/* ------------------------------------------------------------------------- */

section.column_left_sidebar h3,
section.column_left_sidebar h4,
section.column_left_sidebar h5 {
    font-weight: normal;
    margin-top: 8px;
    margin-bottom: 8px;
}

section.column_left_sidebar h3:first-child {
    margin-top: 0;
}

section.column_left_sidebar h3 {
    font-size: 15px;
    line-height: 18px;
}
section.column_left_sidebar h4 { font-size: 14px; }
section.column_left_sidebar h5 { font-size: 12px; }

section.column_left_sidebar p {
    font-size: $font_size_default - 1;
    line-height: 16px;
}

#random_tidbits div.tidbit_entry {
    border-radius: 3px;
    background: #1a1a1a;
    /* Use at least 1px padding on top otherwise it collapses */
    padding: 10px 15px 12px 15px;
    margin-bottom: 12px;
}

#random_tidbits p {
    color: $color_text_dark;
    margin-bottom: 0px;
	a, a:hover {
		border-bottom: none;
	}
}

#random_tidbits p.qauthor {
    font-family: $font_heading;
    font-style: italic;
    font-size: $font_size_default - 2;
    color: $color_text_highlight;
    padding-top: 8px;
}

#nav_left {
    border-radius: 3px;
    background: #1a1a1a;
    padding: 17px 15px 12px 15px;
    margin-bottom: 12px;
    box-shadow: 3px 3px 3px $color_bg - 20;
}

#nav_left li {
    margin-right: 1px;
    padding-bottom: 5px;
}
/* ... */

